<!-- Input Boxes-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/InputScreen"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:clickable="false"
        android:elevation="4dp"
        android:padding="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
    android:id="@+id/container_scrollView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:elevation="4dp"
    android:fillViewport="false">
    <GridLayout
        android:id="@+id/GridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:orientation="vertical"
        android:useDefaultMargins="true"

        >
        <!-- SAR-->
        <TextView
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="start"
            android:layout_row="0"
            android:text="Spoil Angle of Repose"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/SAReditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_gravity="end"
            android:layout_row="0"
            android:hint="@string/SARstring"
            android:inputType="number"

            />
        <!-- HW-->
        <TextView
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="start"
            android:layout_row="1"
            android:text="Highwall Angle"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/HWeditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_gravity="end"
            android:layout_row="1"
            android:hint="@string/HWanglestring"
            android:inputType="number"

            />
        <!-- PW-->
        <TextView
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="start"
            android:layout_row="2"
            android:text="Pit Width"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/PWeditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="end"
            android:layout_row="2"
            android:hint="@string/PitWidthstring"
            android:inputType="number"


            />
        <!-- BenchW-->
        <TextView
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="start"
            android:layout_row="4"
            android:text="Chop Width"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/BenchwidthView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="end"
            android:layout_row="4"
            android:hint="@string/BenchWidthstring"
            android:inputType="number"

            />
        <!-- BenchHeight-->
        <TextView
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="start"
            android:layout_row="3"
            android:text="DL Bench Height"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/BenchheightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="end"
            android:layout_row="3"
            android:hint="@string/BenchHeightstring"
            android:inputType="number"

            />

        <TextView
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="start"
            android:layout_row="5"
            android:text="Chop Thickness"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ChopheightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="end"
            android:layout_row="5"
            android:hint="@string/ChopHeightstring"
            android:inputType="number"

            />
        <TextView
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="start"
            android:layout_row="9"
            android:text="Swell Factor"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/SFeditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="end"
            android:layout_row="9"
            android:hint="@string/SFView"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="start"
            android:layout_row="11"
            android:text=" "
            android:textSize="20sp"/>



            />
        <TextView
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="start"
            android:layout_row="12"
            android:text="Match spoil to pit area (Enables Rehandle)"
            android:textSize="20sp"
            />


        <CheckBox
            android:id="@+id/RHcheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="end"
            android:layout_row="12"
            android:checked="true"
            android:enabled="true" />
    </GridLayout>


</ScrollView>
    <Button
        android:id="@+id/ButtonCreatePit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:onClick="sendPitdim"
        android:orientation="vertical"
        android:text="Create Pit" />
</LinearLayout>

